parslers-benchmark/src/tests/invalid/syntaxErr/pairsExtended/invalidPairNested.wacc
# Check that pair cannot be used as a type

begin
    pair a = null
end